--- a/src/components/App/Profile/Profile.module.css
+++ b/src/components/App/Profile/Profile.module.css
@@ -4,13 +4,63 @@
   padding: 0;
   margin-right: auto;
   margin-left: auto;
-  border: 2px solid grey;
+  background-color: white;
+  border: 2px solid #d9d9d9;
   border-radius: 8px;
-}
-.name {
-  color: grey;
+  box-shadow: 10px 10px 20px #333333;
 }
 .avatar {
   width: 250px;
   height: 250px;
+  padding: 5px;
+}
+.name {
+  font-size: 16px;
+  line-height: 1.2;
+  font-weight: 800;
+  color: #afb1b8;
+}
+.tag {
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 400;
+  color: #afb1b8;
+}
+.location {
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 400;
+  color: #afb1b8;
+}
+.stats {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  border-top: 1px solid #d9d9d9;
+  background-color: #f3f3f3;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+.label {
+  display: block;
+  list-style: none;
+  font-size: 14px;
+  line-height: 1.2;
+  color: #9fa4ad;
+}
+.statsBlock {
+  padding: 14px;
+  width: calc(100% / 3);
+  border-right: 2px solid #d9d9d9;
+}
+.statsBlock:last-child {
+  border-right: none;
+}
+.quantity {
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 600;
 }
