--- a/src/components/App/Profile/Profile.module.css
+++ b/src/components/App/Profile/Profile.module.css
@@ -4,7 +4,7 @@
   padding: 0;
   margin-right: auto;
   margin-left: auto;
-  background-color: white;
+  background-color: #ffffff;
   border: 2px solid #d9d9d9;
   border-radius: 8px;
   box-shadow: 10px 10px 20px #333333;
